fixed bugs in adresses

--- a/style/style2.css
+++ b/style/style2.css
@@ -75,19 +75,19 @@ li {
 }
 
 .block1 {
-    background-image: url(/project-week6/images/IMAGE.png);
+    background-image: url(/images/IMAGE.png);
 }
 
 .block2 {
-    background-image: url(/project-week6/images/IMAGE2.png);
+    background-image: url(/images/IMAGE2.png);
 }
 
 .block3 {
-    background-image: url(/project-week6/images/IMAGE3.png);
+    background-image: url(/images/IMAGE3.png);
 }
 
 .block4 {
-    background-image: url(/project-week6/images/IMAGE4.png);
+    background-image: url(/images/IMAGE4.png);
 
 }
 
